--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "autoprefixer": "10.4.16",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.2",
     "framer-motion": "^10.12.18",
-    "next": "13.4.9",
-    "postcss": "8.4.25",
+    "next": "14.0.2",
+    "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "tailwindcss": "3.3.5",
+    "typescript": "5.2.2",
+    "update": "^0.7.4"
   }
 }
